@@ -26,7 +26,8 @@ example_DATA = \
 	complex-analysis-mandelbrot-set.gel \
 	complex-analysis-mandelbrot-define.gel \
 	complex-analysis-wandering-ball.gel \
-	complex-analysis-mesh.gel
+	complex-analysis-mesh.gel \
+	riemann-integral.gel
 
 EXTRA_DIST = \
 	$(example_DATA)
