@@ -1,3 +1,11 @@
+Thu Sep 22 17:05:13 2016  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: add "filled" to lines
+
+	* examples/riemann-integral.gel: Riemann sums example
+
+	* help/C/genius.xml: document "filled"
+
 Wed Sep 21 23:47:46 2016  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c, src/examples.[ch]: split up examples into
